# openuav2

./: .gitignore  Dockerfile  Dockerfile.base  Dockerfile.graphics  Dockerfile.px4  LICENSE  README.md  chrome.desktop  direct_run_container.sh  docker-compose.yml  dreams-lab-portal  index.html  nginx_dns_resolver.conf  run_container.sh  setup_host.sh  start_desktop.sh  supervisord.conf  terminator_config  traefik-compose.yml  traefik.yml  vnc.html  xorg.conf  xorg.conf.gpu2  xorg.openuav.conf  xstartup.turbovnc
.config/xfce4/xfconf/xfce-perchannel-xml/: xfce4-desktop.xml
ros2_ws/src/stereo_camera/: package.xml
ros2_ws/stereo_camera/: CMakeLists.txt
ros2_ws/stereo_camera/launch/: stereo_rover.launch.py
ros2_ws/stereo_camera/src/: stereo_camera_controller.cpp
ros2_ws/stereo_camera/urdf/: stereo_camera.urdf.xacro
scripts/: generate_xorg_conf.sh  launch_px4_ros2.sh  launch_px4_sitl.sh  manage_digital_twins.sh  setup_host.sh  setup_nginx_proxy.sh  startup.sh  test_px4_ros2.sh
templates/: base.html  navigation.html
